[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.623529, 0.172549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.258824, 0.290196, 0.443137, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0313726, 0.266667, 0.0745098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.258824, 0.290196, 0.443137, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.00784314, 0.482353, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.258824, 0.290196, 0.443137, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.00784314, 0.235294, 0.482353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.258824, 0.290196, 0.443137, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="ui" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Row" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_right = 984.0
margin_bottom = 62.0
size_flags_vertical = 3

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Row/TopRow"]
margin_right = 325.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Row/TopRow/HealthSection"]
margin_left = 37.0
margin_top = 16.0
margin_right = 287.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 30 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="OxygenSection2" type="CenterContainer" parent="MarginContainer/Row/TopRow"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="OxygenBar" type="ProgressBar" parent="MarginContainer/Row/TopRow/OxygenSection2"]
margin_left = 37.0
margin_top = 16.0
margin_right = 287.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 30 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Row/TopRow"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 62.0
size_flags_horizontal = 3
alignment = 1

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Row/TopRow/AmmoSection"]
margin_left = 108.0
margin_top = 13.0
margin_right = 143.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "30"

[node name="AmmoSeparator" type="Label" parent="MarginContainer/Row/TopRow/AmmoSection"]
margin_left = 147.0
margin_top = 13.0
margin_right = 179.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = " / "

[node name="MaxAmmo" type="Label" parent="MarginContainer/Row/TopRow/AmmoSection"]
margin_left = 183.0
margin_top = 13.0
margin_right = 218.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "30"

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_top = 66.0
margin_right = 984.0
margin_bottom = 493.0
size_flags_vertical = 3
size_flags_stretch_ratio = 6.89

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_top = 497.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3
